test: add-exports jcef/com.jetbrains.cef.remote.thrift=ALL-UNNAMED